--- a/_posts/2014-12-17-hatred.md
+++ b/_posts/2014-12-17-hatred.md
@@ -7,7 +7,7 @@ author:     "Wisq"
 header-img: "img/2014/12/hatred.jpg"
 ---
 
-Two months ago, we saw the first trailer for *Hatred*.  It features a faceless, nameless protagonist (his very first words: "my name is not important") going on an ultra-violent killing spree, ostensibly for no reason other than extreme misanthropy.
+Two months ago, we saw the first trailer for *Hatred*.  It features a faceless, nameless video game protagonist (his very first words: "my name is not important") going on an ultra-violent killing spree, ostensibly for no reason other than extreme misanthropy.
 
 Civilians flee in terror but are mercilessly slaughtered, either *en masse* or up close in person.  A downed man gets his head blown off by a shotgun, a pleading woman is executed via a gun placed in her mouth, and several people are stabbed repeatedly.
 
