Non-breaking spaces before punctuation.

--- a/_posts/2014-12-17-hatred.md
+++ b/_posts/2014-12-17-hatred.md
@@ -11,7 +11,7 @@ Two months ago, we saw the first trailer for *Hatred*.  It features a faceless, 
 
 Civilians flee in terror but are mercilessly slaughtered, either *en masse* or up close in person.  A downed man gets his head blown off by a shotgun, a pleading woman is executed via a gun placed in her mouth, and several people are stabbed repeatedly.
 
-Naturally, this caused a bit of a stir.  Some condemned it as terrible and revolting.  Some championed it as a rejection of political correctness and tried to link it to the ongoing GamerGate mess.  Some of us just got a good chuckle out of the sheer juvenility of it all — after all, we haven't really had a good "shock rock" band to laugh at since the 1990s.
+Naturally, this caused a bit of a stir.  Some condemned it as terrible and revolting.  Some championed it as a rejection of political correctness and tried to link it to the ongoing GamerGate mess.  Some of us just got a good chuckle out of the sheer juvenility of it all — after all, we haven't really had a good "shock rock" band to laugh at since the 1990s.
 
 And then yesterday, Valve declared that it wouldn't publish *Hatred* on Steam, and cancelled the project's Steam Greenlight campaign.
 
@@ -19,17 +19,17 @@ And then yesterday, Valve declared that it wouldn't publish *Hatred* on Steam, a
 
 ## Valve wide open
 
-Now, from what I've seen, it's pretty rare that Valve actually steps in and removes a game.  They want to be a broker, not a curator.  The Greenlight system exists only to direct their efforts most effectively — if you gather enough interest from the community, you get scooped off the top and put on the store with everyone else.
+Now, from what I've seen, it's pretty rare that Valve actually steps in and removes a game.  They want to be a broker, not a curator.  The Greenlight system exists only to direct their efforts most effectively — if you gather enough interest from the community, you get scooped off the top and put on the store with everyone else.
 
 In the rare cases where I've seen Valve remove a game, it's usually due to irreconcilable disagreements with the developer (e.g. breach of contract, [tweeting death threats at Valve's CEO][death-threats], etc.), or due to false advertising leading to mass refund requests.  Even then, they'll usually just suspend sales until the developer resolves the problem.
 
 But removing a game for reasons of theme?  Practically unheard of.  As in, I'd never heard of them doing that, ever.
 
-Like most people, I was initially concerned by the news.  It's not that I have any urge to play *Hatred*, and it's certainly not because of any misguided notion of "free speech" or "censorship" or it being "banned" — it's their store, they can do what they want.
+Like most people, I was initially concerned by the news.  It's not that I have any urge to play *Hatred*, and it's certainly not because of any misguided notion of "free speech" or "censorship" or it being "banned" — it's their store, they can do what they want.
 
 Rather, I wondered: **Why now?**
 
-Valve is the gatekeeper to the biggest digital distribution platform the world has ever known.  Until this moment, the rules seemed simple: *"If you build it, they will come&nbsp;… and when they do, we'll sell it on Steam."*  As a game developer, your only challenge is to attract enough attention to make it through Greenlight — usually based on nothing more than the *promise* of a game — and you're pretty much guaranteed a spot in the store.
+Valve is the gatekeeper to the biggest digital distribution platform the world has ever known.  Until this moment, the rules seemed simple: *"If you build it, they will come … and when they do, we'll sell it on Steam."*  As a game developer, your only challenge is to attract enough attention to make it through Greenlight — usually based on nothing more than the *promise* of a game — and you're pretty much guaranteed a spot in the store.
 
 To achieve this, they've set the quality bar *ludicrously* low.  Many recent games just take a stock game engine, throw some store-bought assets around, slap on some textures they nicked from Google Images, maybe add some in-game notes on how to work around the bugs they couldn't fix, and try to sell the whole thing for $10, $15, or more.  (If you're curious how low they can go, check out Jim Sterling's [Squirty Play series][squirty] and prepare to "wtf?" a lot.)
 
