--- a/_posts/2014-12-24-kerbal-1.md
+++ b/_posts/2014-12-24-kerbal-1.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "Kerbal Space Program: Introduction"
+title:      "Kerbal Space Program: An Introduction"
 subtitle:   "Tips and core concepts to get you started"
 date:       2014-12-24 14:00:00 EST
 author:     "Wisq"
