Add one more paragraph.

--- a/_posts/2014-12-24-kerbal-1.md
+++ b/_posts/2014-12-24-kerbal-1.md
@@ -127,6 +127,8 @@ Similarly, to head further out, you would wait until your periapsis and burn pro
 
 Burning retrograde at your periapsis, or prograde at your apoapsis, will make your orbit more circular by decreasing your apoapsis, or increasing your periapsis, respectively.  The closer these are to each other, the more circular your orbit.  Of course, if you do this enough, the two will swap places.
 
+The best way to understand these is just to get into orbit, create a manoeuvre node, grab the various handles on the node, and play around with them.  You'll quickly get a feeling for what each one does to your orbit, and when those changes might be useful.
+
 ## Modding
 
 Although KSP is a great game on its own, there's also an excellent modding community that can make the experience all that much more exciting and fulfilling.  In my next post, I'll talk about modding KSP and start detailing some of my favourite mods.  Stay tuned!
