--- a/_posts/2014-12-25-kerbal-2.md
+++ b/_posts/2014-12-25-kerbal-2.md
@@ -45,7 +45,7 @@ To counter this, FAR also offers diagnostic tools that help you understand what'
 
 The main thing you need to know to design rockets in FAR is that you want the tail of your rocket to have more drag than the nose (so put tailfins on it), and you want the centre of mass as high (nosewards) as possible.  You want your ship to be weighted like a dart, not like a sledgehammer — if your tail is too heavy and has minimal drag, it'll try to flip around and pull you along instead.
 
-To launch rockets in FAR, you should completely ignore the standard Kerbal advice (ascend to 10km and then pitch down to 45º).  Turning that suddenly is guaranteed to cause problems — there should only be a few degrees difference between your nose (navball centre) and your direction of travel (prograde marker) at all times.
+To launch rockets in FAR, you should completely ignore the standard Kerbal advice (ascend to 10km and then pitch down to 45º).  Turning that suddenly is guaranteed to cause problems — there should only be a few degrees difference between your nose (navball centre) and your direction of travel (prograde marker) at all times within the atmosphere.
 
 Instead, I typically do a vertical launch until I clear the pad, followed *almost immediately* by pitching down to about 70º when I'm at about 300 to 400 m/s — enough speed to get some airflow, but not enough to make it unsafe or hard to turn.  My flight path will quickly align with my nose, and then airflow will hold my nose there.  Gravity will slowly tilt my flight path down towards the horizon, and airflow will then pull my nose down as well — but I don't fight it, because I want to be thrusting horizontally to get my orbital velocity up anyway.
 
