--- a/_posts/2014-12-26-kerbal-3.md
+++ b/_posts/2014-12-26-kerbal-3.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "Kerbal Space Program: Pretty Fly for a UI"
+title:      "Kerbal Space Program: Pretty Fly (for a UI)"
 subtitle:   "User interface, automation, and aesthetics"
 #date:       2014-12-25 07:30:00 EST
 author:     "Wisq"
