NUMBERS, HOW DO THEY WORK.

--- a/_posts/2014-12-27-kerbal-4.md
+++ b/_posts/2014-12-27-kerbal-4.md
@@ -9,7 +9,7 @@ header-img: "img/2014/12/kerbal-4.jpg"
 
 Having [introduced Kerbal Space Program][kerbal-1], and discussed some [realism][kerbal-2] and [user interface][kerbal-3] mods, it's time to get to the "meat" of Kerbal modding: the mods that add new stuff.
 
-In this third and final KSP mod round-up, I'll be talking about mods that actually extend gameplay and let you do new things.  From Science to parachutes to colonisation to even building ships off-world, these mods can completely redefine your Kerbal experience.
+In this final part of my KSP mod round-up, I'll be talking about mods that actually extend gameplay and let you do new things.  From Science to parachutes to colonisation to even building ships off-world, these mods can completely redefine your Kerbal experience.
 
 This is a pretty long one, but I'm just going to power through it, because I want to get on to some actual gameplay!  To help, here's an index:
 
