Movement movement movement.

--- a/_posts/2014-12-27-kerbal-4.md
+++ b/_posts/2014-12-27-kerbal-4.md
@@ -138,7 +138,7 @@ If you're concerned about balance, TweakScale does scale the mass and capacity o
 
 Ever get the urge to replicate the [Canadarm][canadarm] in KSP but had no idea how?  Or maybe you're a Transformers fan and want to make some space-faring battle robots?  [Infernal Robotics][infernal] ("IR") to the rescue!
 
-This mod adds a ton of different ways to make things move.  Hinges, telescoping multi-segmented pistons, rotating sockets, gantry rails for full 3D movement movement … if you can imagine making it on a robot, chances are you can make it with Infernal Robotics.
+This mod adds a ton of different ways to make things move.  Hinges, telescoping multi-segmented pistons, rotating sockets, gantry rails for full 3D movement … if you can imagine making it on a robot, chances are you can make it with Infernal Robotics.
 
 ![EVA Parachutes](/img/2014/12/kerbal4/robotics.jpg)
 
