Add forward links in Kerbal posts.

--- a/_posts/2014-12-24-kerbal-1.md
+++ b/_posts/2014-12-24-kerbal-1.md
@@ -17,7 +17,13 @@ KSP just released version 0.90, their first "scope complete" beta version.  They
 
 In my opinion, KSP is well worth the regular asking price, but right now you can [grab it for 25% off at Steam][KSP-steam] until the new year.
 
-In this series of posts, I'll go over some of the core concepts of KSP, then introduce some of the community-made game mods I currently use and recommend.  After that, I hope to post a longer series documenting a modded playthrough.
+In this series of posts, I'll go over some of the core concepts of KSP, then introduce some of the community-made game mods I currently use and recommend:
+
+* In [part two][kerbal-2], I introduce KSP modding and some mods that help make KSP more realistic.
+* [Part three][kerbal-3] is about mods that improve the user interface, automate tasks, and make things look nice.
+* [Part four][kerbal-4] is about mods that add more parts and things you can do in-game.
+
+After that, I hope to post a longer series documenting a modded playthrough.
 
 ## Getting Started
 
@@ -131,8 +137,15 @@ The best way to understand these is just to get into orbit, create a manoeuvre n
 
 ## Modding
 
-Although KSP is a great game on its own, there's also an excellent modding community that can make the experience all that much more exciting and fulfilling.  In my next post, I'll talk about modding KSP and start detailing some of my favourite mods.  Stay tuned!
+Although KSP is a great game on its own, there's also an excellent modding community that can make the experience all that much more exciting and fulfilling:
 
+* In my [next post][kerbal-2], I talk about modding KSP and introduce mods that improve on KSP's realism.
+* [Part three][kerbal-3] introduces mods that automate tasks, improve the user interface, and make things more beautiful.
+* [Part four][kerbal-4] introduces the gameplay mods — the ones that add new things to do, and new ways to do them.
+
+[kerbal-2]: /2014/12/25/kerbal-2/ "Kerbal Space Program: Keepin' It Real — Wisq.net"
+[kerbal-3]: /2014/12/26/kerbal-3/ "Kerbal Space Program: Pretty Fly (for a UI) — Wisq.net"
+[kerbal-4]: /2014/12/27/kerbal-4/ "Kerbal Space Program: Stellar Expansions — Wisq.net"
 
 [KSP-steam]: http://store.steampowered.com/app/220200/ "Kerbal Space Program on Steam"
 [adv-rocket]: http://wiki.kerbalspaceprogram.com/wiki/Tutorial:Advanced_Rocket_Design
