--- a/_posts/2014-12-25-kerbal-2.md
+++ b/_posts/2014-12-25-kerbal-2.md
@@ -7,7 +7,7 @@ author:     "Wisq"
 header-img: "img/2014/12/kerbal-2.jpg"
 ---
 
-Yesterday, [I introduced Kerbal Space Program][previous] and gave some tips and concepts to help get started with it.
+Yesterday, [I introduced Kerbal Space Program][kerbal-1] and gave some tips and concepts to help get started with it.
 
 Today, I'll be discussing how to augment the game and take it to new heights.  I've broken this up into multiple posts, starting with some core mods that dramatically alter the game's difficulty and realism.
 
@@ -148,9 +148,15 @@ But even for the more routine missions, KCT gives you a certain sense of having 
 
 ## Other Mods
 
-This is just the tip of the iceberg.  I currently run with over 50 mods, and while I probably won't have a chance to introduce all of them, there are plenty more that are worth a mention.  I'll cover these in future posts, so stay tuned!
+This is just the tip of the iceberg.  I currently run with over 50 mods, and while I probably won't have a chance to introduce all of them, there are plenty more that are worth a mention:
 
-[previous]: /2014/12/24/kerbal-1/ "Kerbal Space Program: An Introduction — Wisq.net"
+* [Part three][kerbal-3] in this series talks about mods that automate tasks, improve the user interface, and make things more beautiful.
+* [Part four][kerbal-4] introduces the gameplay mods — the ones that add new things to do, and new ways to do them.
+
+[kerbal-1]: /2014/12/24/kerbal-1/ "Kerbal Space Program: An Introduction — Wisq.net"
+[kerbal-3]: /2014/12/26/kerbal-3/ "Kerbal Space Program: Pretty Fly (for a UI) — Wisq.net"
+[kerbal-4]: /2014/12/27/kerbal-4/ "Kerbal Space Program: Stellar Expansions — Wisq.net"
+
 [ckan]: http://forum.kerbalspaceprogram.com/threads/100067 "The Comprehensive Kerbal Archive Network (CKAN) Package Manager — KSP Forum"
 [FAR]: http://forum.kerbalspaceprogram.com/threads/20451 "Ferram Aerospace Research — KSP Forum"
 [maxQ]: http://en.wikipedia.org/wiki/Max_Q "Max Q — Wikipedia"
