--- a/_posts/2014-12-26-kerbal-3.md
+++ b/_posts/2014-12-26-kerbal-3.md
@@ -193,10 +193,12 @@ It's all very well done and rarely intrusive, and adds a lot to the game atmosph
 
 So we've made the game realistic, and we've made it look good and play even better.  What's left?  Mods that actually do stuff!
 
-In my next post, we'll look at mods that extend the things you can do in-game, including mining for fuel, setting up colonies, scanning planets, and even building ships off-world.  Stay tuned!
+In the [fourth and last part][kerbal-4] of this series, we'll look at mods that extend the things you can do in-game, including mining for fuel, setting up colonies, scanning planets, and even building ships off-world!
 
-[kerbal-1]: /2014/12/24/kerbal-1/
-[kerbal-2]: /2014/12/25/kerbal-2/
+[kerbal-1]: /2014/12/24/kerbal-1/ "Kerbal Space Program: An Introduction — Wisq.net"
+[kerbal-2]: /2014/12/25/kerbal-2/ "Kerbal Space Program: Keepin' It Real — Wisq.net"
+[kerbal-4]: /2014/12/27/kerbal-4/ "Kerbal Space Program: Stellar Expansions — Wisq.net"
+
 [mechjeb]: http://forum.kerbalspaceprogram.com/threads/12384 "MechJeb — KSP Forum"
 [porkchop]: http://en.wikipedia.org/wiki/Porkchop_plot "Porkchop plot — Wikipedia"
 [KER]: http://forum.kerbalspaceprogram.com/threads/18230 "Kerbal Engineer Redux — KSP Forum"
