Move ScienceAlert to kerbal-3.

--- a/_posts/2014-12-26-kerbal-3.md
+++ b/_posts/2014-12-26-kerbal-3.md
@@ -79,6 +79,20 @@ It lists all your contracts and their rewards in a collapsible tree view, lets y
 
 If you're in Career mode, grab this.
 
+## ScienceAlert
+
+Sometimes the biggest hurdle to collecting science in KSP isn't having the right instruments or being in the right place — it's *knowing* that you've got those right instruments in that right place.
+
+That's where [ScienceAlert][sciencealert] comes in.  The moment you enter a new situation where you can collect science and have the right tools to do so, it can (optionally and configurably) play an alert noise, stop any time warp, and provide buttons to easily collect it.
+
+<span class="image-right">
+![ScienceAlert](/img/2014/12/kerbal4/sciencealert.jpg)
+</span>
+
+These reports includes both on-board science instruments and also crew/EVA reports, and they recognise each individual biome on the planet or moon as well.  So now you can easily orbit a planet and collect readings and reports for every single biome, without missing any or having to keep your own checklist.
+
+<div class="clear"></div>
+
 ### Docking assistance mods
 
 If you're planning on doing any amount of docking, you'll want some help getting lined up properly, as the camera angles can be quite deceptive.  Thankfully, this is a well-recognised problem, and there are several mods to help you.
@@ -205,6 +219,7 @@ In the [fourth and last part][kerbal-4] of this series, we'll look at mods that 
 [KAC]: http://forum.kerbalspaceprogram.com/threads/24786 "Kerbal Alarm Clock — KSP Forum"
 [precise]: http://forum.kerbalspaceprogram.com/threads/47863 "Precise Node — KSP Forum"
 [contract]: http://forum.kerbalspaceprogram.com/threads/91034 "Contracts Window + — KSP Forum"
+[sciencealert]: http://forum.kerbalspaceprogram.com/threads/76793 "ScienceAlert — KSP Forum"
 [dock-align]: http://forum.kerbalspaceprogram.com/threads/43901 "Docking Port Alignment Indicator — KSP Forum"
 [lazor]: http://www.curse.com/ksp-mods/kerbal/220272-lazor-docking-cam
 [manifest]: http://forum.kerbalspaceprogram.com/threads/62270 "Ship Manifest — KSP Forum"
