Move more kerbal-3 images to the right.

--- a/_posts/2014-12-26-kerbal-3.md
+++ b/_posts/2014-12-26-kerbal-3.md
@@ -53,7 +53,9 @@ The rest of these mods don't really try to automate things, they just help the p
 
 [Kerbal Alarm Clock][KAC], or "KAC", lets you keep track of upcoming events.  You can quickly add alarms for manoeuvres, or for other events like changing SOIs or reaching an orbital apsis.  When approaching an alarm, it will halt any time compression and pop up a reminder.
 
+<span class="image-right">
 ![Kerbal Alarm Clock](/img/2014/12/kerbal3/alarm.jpg)
+</span>
 
 KAC is pretty much essential to running several missions at once.  If you're running time-critical mods like TAC Life Support or Kerbal Construction Time, or if you just like the challenge of juggling multiple missions at once, grab this mod.
 
@@ -61,13 +63,17 @@ Note that several mods now integrate with KAC, meaning they can automatically cr
 
 ### Precise Node
 
-The default manoeuvre node editor isn't terrible, but it also makes precise adjustments a huge chore.  [Precise Node][precise] does exactly what it suggests, giving you the ability to adjust manoeuvres as precisely as you want, including entering numbers directly.
-
+<span class="image-right">
 ![Precise Node](/img/2014/12/kerbal3/precise.jpg)
+</span>
+
+The default manoeuvre node editor isn't terrible, but it also makes precise adjustments a huge chore.  [Precise Node][precise] does exactly what it suggests, giving you the ability to adjust manoeuvres as precisely as you want, including entering numbers directly.
 
 Be sure to mess around with the settings (the "O" button) to see what mode you prefer.  I enable both "show additional UT controls" and "use x10 UT increment".  Aside from the extra useful row of buttons, enabling both together gets me "-Orb" and "+Orb" buttons so I can move nodes forward/backwards by whole orbits at a time.
 
 Grab this mod — there's no reason not to.
+
+<div class="clear"></div>
 
 ### Contract Window +
 
