Publish, crosslinks, copy edits.

--- a/_posts/2014-12-31-kadet-1.md
+++ b/_posts/2014-12-31-kadet-1.md
@@ -146,10 +146,11 @@ I'm deliberately neglecting the shipbuilding side of the tree because I want mor
 
 Time to let those lazy scientists rest.  Or whatever they do when they're not demanding surface samples from the sidewalk outside their labs.
 
-*Coming up in the next post: Day three, and the start of actual spaceflight!*
+*In our [next episode][kadet-2]: Day three, and the start of actual spaceflight!*
 
 [kerbal-1]: /2014/12/24/kerbal-1/ "Kerbal Space Program: An Introduction — Wisq.net"
 [kerbal-2]: /2014/12/25/kerbal-2/ "Kerbal Space Program: Keepin' It Real — Wisq.net"
+[kadet-2]: /2015/01/02/kadet-2/ "Space Kadet: You Spin Me Round — Wisq.net"
 [sciencealert]: /2014/12/26/kerbal-3/#sciencealert "Kerbal Space Program: Pretty Fly (for a UI) – ScienceAlert — Wisq.net"
 
 [sounding]: http://en.wikipedia.org/wiki/Sounding_rocket "Sounding rocket — Wikipedia"
