--- a/_posts/2015-01-02-kadet-2.md
+++ b/_posts/2015-01-02-kadet-2.md
@@ -7,9 +7,13 @@ author:     "Wisq"
 header-img: "img/kadet/002/header.jpg"
 ---
 
+<span class="note">
+This is the second post of my highly-modded Kerbal Space Program playthrough.  The first is [here][kadet-1].
+</span>
+
 Today's Kerballing begins a little awkwardly, with a bug that prevents me launching or even exiting from the vehicle editor.
 
-Before I began playing, I pulled up CKAN and upgraded all my mods.  I always check the changelogs to see if the changes sound major or not, but a minor "fix this error" change turned out to pretty much break vehicle editing.
+Before I started, I pulled up CKAN and upgraded all my mods.  I always check the changelogs to see if the changes sound major or not, but a minor "fix this error" change turned out to pretty much break vehicle editing.
 
 CKAN doesn't currently have a "downgrade" feature, so I just uninstalled it and manually reinstalled an older version.  By the time I checked the forums to report the bug, several others already had.
 
@@ -27,7 +31,7 @@ Thanks to the sounding rockets, the genuine part of our spaceflight program begi
 
 Some quick math seems to confirm that [MechJeb][mechjeb]'s delta-v display is correctly modified to take [KIDS][KIDS] into account.  So as long as the readouts show me having at least 3500 m/s delta-v, I should be able to make it into orbit.
 
-With a three-tonne payload that includes pairs of Mystery Goo and Science Jr wedges, a simple 1-2 staging configuration (tank + engine + 2x tank + engine) gets me about 1300 m/s delta-v per stage.  So our lowest stage barely needs 1000 m/s to finish the job.
+With a three-tonne payload that includes pairs of Mystery Goo and Science Jr wedges, a simple 1-2 staging configuration (tank + engine + 2x tank + engine) gets me about 1300 m/s delta-v per stage.  So our lowest stage needs less than 1000 m/s to finish the job.
 
 ![Korona 1](/img/kadet/002/korona-01.jpg "Korona 1")
 
@@ -105,13 +109,15 @@ The fairings blow and the parachutes violently rip the pod off the rocket.  Jebe
 
 **Korona 7** features an extra set of winglets and an "Abort" group that shuts down all engines, blows the fairings and decoupler, and deploys the chutes.  Takeoff is still a bit rocky — we end up going straight up a lot longer than intended, with almost no attitude control — but the SRBs get us up to 100km apoapsis almost on their own, leaving most of our liquid fuel for space operations.
 
-There's an additional complication I hadn't considered, though:  The orbital telescope can be used once per biome, but it can only hold one set of observations at a time.  If I want to observe something else, I need to transmit my previous results first.
+We make orbit with 1000 m/s to spare, but there's an additional complication I hadn't considered:  The orbital telescope can be used once per biome, but it can only hold one set of observations at a time.  If I want to observe something else, I need to transmit my previous results first.
 
 The problem is, due to line-of-sight radio limits, I can only transmit data when I'm flying over the Space Centre.  It also consumes most of my energy reserves just to send a single set.  Add this to the fact that it's morning at KSC — so when we first fly over it, we've just come through the dark side and lost a lot of power.
 
 ![Transferring science with Ship Manifest](/img/kadet/002/manifest.jpg "This changes EVERYTHING.")
 
 Between all these, it looks like it's going to take a long time to survey the entire planet.  But then I realise my [Ship Manifest][manifest] mod offers an alternative: I can transfer the science data out of the telescope, into the command pod's science container.  I'm not sure if it's entirely legit, but it seems logical — download from the telescope, free up its memory, buffer the data in main memory, transmit or recover it later.  (Presumably this also works for thermometer and barometer readings, too.)
+
+In addition to grabbing telescope imagery for every biome except the poles, we also boost above 250km and collect science data from high orbit.  We transmit all our data to the KSC before deorbiting in case of trouble, but our landing is uneventful.
 
 Night falls on the KSC, and day four is over.  We've retrieved over <span class="science">120</span> Science today, which definitely proves that the telescope and barometer were worth the investment.  But we're also running out of science on Kerbal, so it's time to start setting our sights higher.
 
@@ -121,6 +127,7 @@ I was planning on grabbing Advanced Electrics (<span class="science">160</span>)
 
 *Next episode: To the Mun!  Hopefully.*
 
+[kadet-1]: /2014/12/31/kadet-1/ "Space Kadet: First Flight — Wisq.net"
 [KIDS]: /2014/12/25/kerbal-2/#kids "KIDS–— Kerbal Space Program: Keepin' It Real — Wisq.net"
 [mechjeb]: /2014/12/26/kerbal-3/#mechjeb "MechJeb — Kerbal Space Program: Pretty Fly (for a UI) — Wisq.net"
 [trajectories]: http://forum.kerbalspaceprogram.com/threads/104694 "Trajectories: atmospheric predictions — KSP Forum"
