Add kadet-3 post and images.

--- a/_posts/2015-01-02-kadet-2.md
+++ b/_posts/2015-01-02-kadet-2.md
@@ -125,9 +125,10 @@ Night falls on the KSC, and day four is over.  We've retrieved over <span class=
 
 I was planning on grabbing Advanced Electrics (<span class="science">160</span>) for the deployable solar panels, but with science running low, I take a detour.  Getting to 2.5m Rockomax-class rockets is more expensive than I thought, so I just research General Rocketry (<span class="science">20</span>) for bigger boosters, and General Construction (<span class="science">45</span>) for struts and tri-couplers.  Forget Rockomax, we'll just build big tri-stacks instead.
 
-*Next episode: To the Mun!  Hopefully.*
+*Next episode: [To the Mun!][kadet-3]  With deadly consequences …*
 
 [kadet-1]: /2014/12/31/kadet-1/ "Space Kadet: First Flight — Wisq.net"
+[kadet-3]: /2015/01/04/kadet-3/ "Space Kadet: Dark Side of the Mun — Wisq.net"
 [KIDS]: /2014/12/25/kerbal-2/#kids "KIDS–— Kerbal Space Program: Keepin' It Real — Wisq.net"
 [mechjeb]: /2014/12/26/kerbal-3/#mechjeb "MechJeb — Kerbal Space Program: Pretty Fly (for a UI) — Wisq.net"
 [trajectories]: http://forum.kerbalspaceprogram.com/threads/104694 "Trajectories: atmospheric predictions — KSP Forum"
