--- a/_posts/2015-01-04-kadet-3.md
+++ b/_posts/2015-01-04-kadet-3.md
@@ -190,7 +190,7 @@ Our inclination is good, too, so we intercept the Mun for 830 m/s delta-v and ac
 
 I orbit until I tell them I've seen everything I'm going to see, and then they fire up my engines and we break orbit.  They're going for the most efficient burn, one that ejects me out behind the Mun's orbit so that I give up the most orbital velocity and have a cheap return.
 
-They've got me lined up for a 100km peripasis above Kerbin, at which point we'll circularise and then descend.  It's not technically necessary, but we've got tons of fuel to spare, and going for Low Kerbin Orbit (LKO) before deorbiting means I'll have the smoothest and safest reentry possible.
+They've got me lined up for a 100km periapsis above Kerbin, at which point we'll circularise and then descend.  It's not technically necessary, but we've got tons of fuel to spare, and going for Low Kerbin Orbit (LKO) before deorbiting means I'll have the smoothest and safest reentry possible.
 
 My cynical side can't help but wonder what they're trying to protect — me, or my treasure trove of just over <span class="science">411</span> Science?  But, either way, smooth is good.
 
@@ -228,7 +228,7 @@ If you ever need to know how many batteries to pack in your ship, use the [KSP D
 
 Life support came back on with only 30 minutes remaining until death.  I need to be more careful with antennas.  While having an active antenna even on a manned ship is useful in case the crew dies and you need to remote control it, I also had two DP-10s that I should've automatically disabled when I automatically enabled the Communotron 16 at 75km altitude.  Would've bought us 45 minutes or so.
 
-I always wondered why anyone might want to use Universal Storage's hygrogen fuel cell generator.  Now I know!
+I always wondered why anyone might want to use Universal Storage's hydrogen fuel cell generator.  Now I know!
 
 The Ferram Aerospace (FAR) "DCA" assist thing is very handy for damping control inputs at high speeds and pressures, and it works with standard controls, MechJeb "Smart A.S.S.", the RemoteTech flight computer, etc.  In my experience, it's still better to just avoid control surfaces on rockets, but I haven't researched any SAS technologies yet, so I kinda need it.
 
