--- a/_posts/2015-01-04-kadet-3.md
+++ b/_posts/2015-01-04-kadet-3.md
@@ -38,7 +38,7 @@ Instead, we came up with a workaround: We can split a rocket stack into three wi
 
 ![Korona 8](/img/kadet/003/korona-08.jpg "Korona 8")
 
-Our first prototype was **Korona 8**.  It had the old Korona command stack, mostly — we added an extra cargo canister that could hold over 300 days worth of life support supplies, because the standard three days just wasn't going to cut it for a trip to the Mun.
+Our first prototype was **Korona 8**.  It had the old *Korona* command stack, mostly — we added an extra cargo canister that could hold over 300 days worth of life support supplies, because the standard three days just wasn't going to cut it for a trip to the Mun.
 
 <span class="image-right">
 ![Korona 8 accident](/img/kadet/003/korona-08-oops.jpg "&ldquo;Is it supposed to look like that?&rdquo;")
