Add degree sign.

--- a/_posts/2015-01-04-kadet-3.md
+++ b/_posts/2015-01-04-kadet-3.md
@@ -120,7 +120,7 @@ For **Korona 18**, we redesign the command module for our Munar mission.  The pr
 
 We add the usual mix of science wedges.  The top layer has two Mystery Goos and two Science Juniors, while the bottom has the orbital telescope, magnetometer, barometer, and a bay full of batteries.  The hope is that, in the unlikely event of a hard landing, we'll lose the recording gear but keep the samples.
 
-The engineers tell me they think they have the control surface thing figured out.  Something about enabling "FAR 'DCA' flight assist" (whatever *that* is) because it dampens out control inputs at high speed.  Even so, we limit the surfaces to 50% size and 1 degree deflection so they'll only have a tiny influence.
+The engineers tell me they think they have the control surface thing figured out.  Something about enabling "FAR 'DCA' flight assist" (whatever *that* is) because it dampens out control inputs at high speed.  Even so, we limit the surfaces to 50% size and 1º deflection so they'll only have a tiny influence.
 
 We haven't tested this new configuration, but Jebediah insists on hopping into the pilot's chair.  He's talking about an "end to unmanned flight" and how we need to "take more risks" for progress, but I think our space program needs better psychological screening.
 
