Hyperlink it up.

--- a/_posts/2015-01-04-kadet-3.md
+++ b/_posts/2015-01-04-kadet-3.md
@@ -226,16 +226,22 @@ OH MY GOD I HAVE NEVER BEEN SO HAPPY TO SEE A SUNRISE I'M COMING HOOOOOOME
 
 If you ever need to know how many batteries to pack in your ship, use the [KSP Darkness Time Calculator][darkness].  I didn't actually use this before the trip, but my own worst-case results were what I figured: under an hour of darkness.  Just didn't count on an eclipse!
 
-Life support came back on with only 30 minutes remaining until death.  I need to be more careful with antennas.  While having an active antenna even on a manned ship is useful in case the crew dies and you need to remote control it, I also had two DP-10s that I should've automatically disabled when I automatically enabled the Communotron 16 at 75km altitude.  Would've bought us 45 minutes or so.
+[Life support][TAC] came back on with only 30 minutes remaining until death.  I need to be more careful with antennas.  While having an [active antenna][remotetech] even on a manned ship is useful in case the crew dies and you need to remote control it, I also had two DP-10s that I should've automatically disabled when I automatically enabled the Communotron 16 at 75km altitude.  Would've bought us 45 minutes or so.
 
-I always wondered why anyone might want to use Universal Storage's hydrogen fuel cell generator.  Now I know!
+I always wondered why anyone might want to use the [Universal Storage][US] hydrogen fuel cell generator.  Now I know!
 
-The Ferram Aerospace (FAR) "DCA" assist thing is very handy for damping control inputs at high speeds and pressures, and it works with standard controls, MechJeb "Smart A.S.S.", the RemoteTech flight computer, etc.  In my experience, it's still better to just avoid control surfaces on rockets, but I haven't researched any SAS technologies yet, so I kinda need it.
+The [FAR][FAR] "DCA" flight assist is very handy for damping control inputs at high speeds and pressures, and it works with standard controls, [MechJeb][mechjeb] "Smart A.S.S.", the [RemoteTech][remotetech] flight computer, etc.  In my experience, it's still better to just avoid control surfaces on rockets altogether — use SAS or vectoring to tip the rocket over at low speed, then rely on fins plus high speed to keep you stable — but I haven't researched any SAS technologies yet, so I kinda need it.
 
-The "stuck launchpad" bug was almost certainly related to Kerbal Joint Reinforcement.  There have been a lot of reports of trouble in the 3.x series, so while I fully expect Ferram will work those out eventually, I'm sticking with the older 2.4.5 for now.
+The "stuck launchpad" bug was almost certainly related to [Kerbal Joint Reinforcement][KJR].  There have been a lot of reports of trouble in the 3.x series, so while I fully expect Ferram will work those out eventually, I'm sticking with the older 2.4.5 for now.
 
 *Can we take the Korona 29 design to Minmus, too?  Will Bob forgive us for sending him right back out again?  What will we do with all this Science?  Join us next episode and find out!*
 
 [kadet-1]: /2014/12/31/kadet-1/ "Space Kadet: First Flight — Wisq.net"
 [kadet-2]: /2015/01/02/kadet-2/ "Space Kadet: You Spin Me Round — Wisq.net"
 [darkness]: http://www.prism.gatech.edu/~bnichols8/projects/kspdarkness/main.shtml "KSP Darkness Time Calculator"
+[FAR]: /2014/12/25/kerbal-2/#far "FAR — Kerbal Space Program: Keepin' It Real — Wisq.net"
+[TAC]: /2014/12/25/kerbal-2/#tac-life-support "TAC Life Support — Kerbal Space Program: Keepin' It Real — Wisq.net"
+[remotetech]: /2014/12/25/kerbal-2/#remotetech "RemoteTech — Kerbal Space Program: Keepin' It Real — Wisq.net"
+[US]: /2014/12/25/kerbal-2/#procedural-fairings--universal-storage "Universal Storage — Kerbal Space Program: Keepin' It Real — Wisq.net"
+[mechjeb]: /2014/12/26/kerbal-3/#mechjeb "MechJeb — Kerbal Space Program: Pretty Fly (for a UI) — Wisq.net"
+[KJR]: http://forum.kerbalspaceprogram.com/threads/55657 "Kerbal Joint Reinforcement — KSP Forum"
