Add links from Kerbal to Kadet.

--- a/_posts/2014-12-24-kerbal-1.md
+++ b/_posts/2014-12-24-kerbal-1.md
@@ -23,7 +23,7 @@ In this series of posts, I'll go over some of the core concepts of KSP, then int
 * [Part three][kerbal-3] is about mods that improve the user interface, automate tasks, and make things look nice.
 * [Part four][kerbal-4] is about mods that add more parts and things you can do in-game.
 
-After that, I hope to post a longer series documenting a modded playthrough.
+After that, if you're interested in seeing how all these mods play together, I'm currently blogging a [playthrough with over 80 mods installed][kadet-1].
 
 ## Getting Started
 
@@ -146,6 +146,7 @@ Although KSP is a great game on its own, there's also an excellent modding commu
 [kerbal-2]: /2014/12/25/kerbal-2/ "Kerbal Space Program: Keepin' It Real — Wisq.net"
 [kerbal-3]: /2014/12/26/kerbal-3/ "Kerbal Space Program: Pretty Fly (for a UI) — Wisq.net"
 [kerbal-4]: /2014/12/27/kerbal-4/ "Kerbal Space Program: Stellar Expansions — Wisq.net"
+[kadet-1]: /2014/12/31/kadet-1/ "Space Kadet: First Flight — Wisq.net"
 
 [KSP-steam]: http://store.steampowered.com/app/220200/ "Kerbal Space Program on Steam"
 [adv-rocket]: http://wiki.kerbalspaceprogram.com/wiki/Tutorial:Advanced_Rocket_Design
