--- a/_posts/2014-12-27-kerbal-4.md
+++ b/_posts/2014-12-27-kerbal-4.md
@@ -189,12 +189,15 @@ For a game that hasn't even released yet, KSP has a pretty ridiculously amazing 
 
 And of course, this mod list is constantly changing.  I'm sure that if I revisit this mod list in a year, I'll have a ton more mods to add, and probably several of the ones I've listed will be superseded by even better alternatives.
 
-But for now, it's time to stop modding and start playing.  Over the next few weeks, I'm hoping to start up a series of posts about an actual modded playthrough.  So if you're interested to see how all these mods play together, watch this space!
+But for now, it's time to stop modding and start playing!  I'm currently doing a [playthrough with over 80 mods installed][kadet-1], so if you're interested in how all these mods play together, go take a look.
+
+Happy KSPing!
 
 
 [kerbal-1]: /2014/12/24/kerbal-1/ "Kerbal Space Program: An Introduction — Wisq.net"
 [kerbal-2]: /2014/12/25/kerbal-2/ "Kerbal Space Program: Keepin' It Real — Wisq.net"
 [kerbal-3]: /2014/12/26/kerbal-3/ "Kerbal Space Program: Pretty Fly (for a UI) — Wisq.net"
+[kadet-1]: /2014/12/31/kadet-1/ "Space Kadet: First Flight — Wisq.net"
 [TAC]: /2014/12/25/kerbal-2/#tac-life-support "Kerbal Space Program: Keepin' It Real — TAC Life Support — Wisq.net"
 [remotetech]: /2014/12/25/kerbal-2/#remotetech "Kerbal Space Program: Keepin' It Real — TAC Life Support — Wisq.net"
 
